semi-fix for jumping sidemenu

--- a/sunpy_sphinx_theme/sunpy/static/sunpy_style.css
+++ b/sunpy_sphinx_theme/sunpy/static/sunpy_style.css
@@ -734,3 +734,15 @@ div.sphx-glr-download a:hover {
 .sphx-glr-thumbcontainer a.internal {
   padding: 130px 10px 0;
 }
+
+/*
+   This should kind of fix the issue with the navbar and the sidelinks jumping.
+   Taken from https://github.com/twbs/bootstrap/issues/1768
+*/
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -40px;
+  height: 40px;
+  visibility: hidden;
+}
